Add validate and authorize functionalities
